# PyGUIAdapterLite

./: .gitignore  README.md  README_draft.md  README_en.md  mkdoc.py  mkreadme.bat  mkreadme.sh  pyproject.toml
docs/: types_and_widgets.md
examples/: README  basic_types.py  bool_t_example.py  bool_types.py  cancel_function_example.py  choice_demo.py  choice_t_example.py  choices_t_example.py  code_snippet_1.py  code_snippet_2.py  code_snippet_3.py  color_demo.py  color_hex_t_example.py  custom_param_widget.py  dir_list_example.py  dir_list_t_example.py  dir_t_example.py  disable_capture_system_exit_exception.py  disable_logging_message_example.py  enum_and_literal_example.py  enum_type_demo.py  equation_solver.py  equation_solver_3.py  exception_example.py  execution_callbacks_example.py  file_list_example.py  file_list_t_example.py  file_t_example.py  float_r_example.py  float_s_example.py  float_ss_example.py  float_types_example.py  handle_exception.py  hdpi_example.py  hello_world.py  i18n_example.py  input_dialog_demo.py  int_r_example.py  int_s_example.py  int_ss_example.py  (+41 more)
examples/foo-app/: hook-pyguiadapterlite.py  main.py  main.spec
licenses/: hidpi-tk-LICENSE
pyguiadapterlite/: __init__.py  _messages.py  assets.py  basicwindow.py  execwindow.py  fn.py  funclist.py  i18n.py  intvalue.py  listview.py  listwindow.py  paramtabview.py  pathutils.py  scrollarea.py  tabview.py  termview.py  textviewer.py  toast.py  tooltip.py  utils.py  valuewidget.py  window.py
pyguiadapterlite/components/: colorlabel.py  (+18 more)
tools/: mktoc.py  mktypedoc.py  uplocales.py
(+65 files in other folders)
