[tool.poetry]
name = "pyguiadapterlite"
version = "0.6.10"
description = "Turn your python functions into GUI-based applications just in a few lines of code."
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"
repository = "https://github.com/zimolab/pyguiadapterlite"

[tool.poetry.dependencies]
python = ">=3.8"
tomlkit = "^0.13.3"
docstring-parser = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"
